--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version="4.5.54", features=["derive"] }
+clearscreen = "4.0.3"
+serde = { version="1.0.228", features=["derive"] }
+serde_json = "1.0.149"
+thiserror = "2.0.18"
+walkdir = "2.5.0"
+zip = "8.1.0"
